Update Game.java